--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4482084002?gh_src=659d87612'>Job Application for Senior Program Manager, Customer Operations at Anaplan</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/total-rewards-project-manager-akcXe--_ar6y6QaKiznY58'>Total Rewards Project Manager #5315 job at Avispa Technology in Newark, NJ, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Newark, NJNewark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -52,7 +56,7 @@
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/f735548b-ce7d-42b0-83bf-6d1d65dda519'>Geotab - Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/geotab/f735548b-ce7d-42b0-83bf-6d1d65dda519'>Geotab - Project Manager</a></h5> 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -102,7 +106,7 @@
 <p><span class="badge badge-light">Seattle, Washington San Francisco New York Chicago Seattle</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698581135-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698581135-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -114,7 +118,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oIEWafwc&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=n9oBpMwO'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oIEWafwc&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=n9oBpMwO'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -158,7 +162,7 @@
 <p><span class="badge badge-light">Lafayette, Louisiana</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://honeywell.join.com/jobs/464753-project-manager-m-f-d-hamburg-berlin-stuttgart'>Job @ Honeywell (Hamburg): Project Manager (m/f/d)... | JOIN</a></h5> 
+<h5><a href='https://honeywell.join.com/jobs/464753-project-manager-m-f-d-hamburg-berlin-stuttgart'>Job @ Honeywell (Hamburg): Project Manager (m/f/d)... | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -186,7 +190,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aventri/5765cac1-d9f3-4bdf-9991-e10ffa1aafb7'>Aventri - Technical Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aventri/5765cac1-d9f3-4bdf-9991-e10ffa1aafb7'>Aventri - Technical Project Manager</a></h5> 
 <p><span class="badge badge-light">Norwalk, CT</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -242,7 +246,7 @@
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cennox.applytojob.com/apply/gF2TtWARGy/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
+<h5><a href='http://cennox.applytojob.com/apply/gF2TtWARGy/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -266,7 +270,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698558526-project-manager-in-community-relations'>BlaBlaCar Project Manager in Community Relations | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698558526-project-manager-in-community-relations'>BlaBlaCar Project Manager in Community Relations | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -274,7 +278,7 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://savangardcareer.recruitee.com/o/project-manager'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://savangardcareer.recruitee.com/o/project-manager'>
       Project Manager - Savangard Sp. z o.o.
     </a></h5> 
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
@@ -313,7 +317,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nortekairsolutions-careers-fr/job/oO7sbfwi'>Carri?res Nortek Air Solutions - Project Manager III</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nortekairsolutions-careers-fr/job/oO7sbfwi'>Carri?res Nortek Air Solutions - Project Manager III</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -417,7 +421,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk03ia1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mainebhr.recruiterbox.com/jobs/fk03ia1'>
     Education Specialist III: MLTI Project Manager  at State of Maine
 </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
@@ -445,10 +449,6 @@
 <hr/>
 <h5><a href='http://warehousegoods.applytojob.com/apply/1u2eLSoKHY/Project-Manager'>Project Manager - Greenlane - Career Page</a></h5> 
 <p><span class="badge badge-light">Torrance, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698534521-customer-program-manager'>Avery Dennison Customer Program Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Hong Kong</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
